更新版本号为1.0.0;语言为zh-Hans

--- a/Hust-Network-Gui/Hust-Network-Gui.csproj
+++ b/Hust-Network-Gui/Hust-Network-Gui.csproj
@@ -12,6 +12,9 @@
         <IsPackable>false</IsPackable>
         <Title>HUST Network GUI</Title>
         <Authors>Huarkiou</Authors>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
+        <NeutralLanguage>zh-Hans</NeutralLanguage>
     </PropertyGroup>
 
     <ItemGroup>
