--- a/Hust-Network-Gui/Hust-Network-Gui.csproj
+++ b/Hust-Network-Gui/Hust-Network-Gui.csproj
@@ -3,12 +3,16 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <PublishAot>true</PublishAot>
-        <!-- Recommended Avalonia trimming settings for Native AOT -->
-        <BuiltInComInteropSupport>false</BuiltInComInteropSupport>
-        <TrimMode>link</TrimMode>
-        <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+        <!-- Recommended Avalonia trimming settings for Native AOT -->
+        <PublishAot>true</PublishAot>
+        <PublishTrimmed>true</PublishTrimmed>
+        <TrimMode>link</TrimMode>
+        <SelfContained>true</SelfContained>
+        <StripSymbols>true</StripSymbols>
+        <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+        <!-- Info -->
+        <ApplicationManifest>app.manifest</ApplicationManifest>
         <ApplicationIcon>Assets\appLogo.ico</ApplicationIcon>
         <RootNamespace>HustNetworkGui</RootNamespace>
         <IsPackable>false</IsPackable>
@@ -17,30 +21,31 @@
         <AssemblyVersion>1.0.0</AssemblyVersion>
         <FileVersion>1.0.0</FileVersion>
         <NeutralLanguage>zh-Hans</NeutralLanguage>
+        <InvariantGlobalization>true</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.2.4" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.2.4" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.4" />
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.4" />
+        <PackageReference Include="Avalonia" Version="11.2.4"/>
+        <PackageReference Include="Avalonia.Desktop" Version="11.2.4"/>
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.4"/>
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.4"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Include="Avalonia.Diagnostics" Version="11.2.4">
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">none</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Serilog" Version="4.2.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+        <PackageReference Include="Serilog" Version="4.2.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <!-- Preserve Avalonia types for reflection -->
-        <TrimmerRootAssembly Include="Avalonia.Themes.Fluent" />
-        <!-- <TrimmerRootAssembly Include="Avalonia.Themes.Default" />-->
+        <TrimmerRootAssembly Include="Avalonia.Themes.Fluent"/>
+        <!-- <TrimmerRootAssembly Include="Avalonia.Themes.Default"/> -->
     </ItemGroup>
-    
+
     <ItemGroup>
-      <AvaloniaResource Include="Assets\appLogo.ico" />
+        <AvaloniaResource Include="Assets\appLogo.ico"/>
     </ItemGroup>
 </Project>
